examples/legacy/invalid_scl/unbound_3.scl
rel R(a) = (_, _) = max[a](o: Q(_, a))
